@@ -8,9 +8,10 @@ use warnings;
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
-  NAME         => 'Log::Any::Adapter::Mojo',
-  VERSION_FROM => 'lib/Log/Any/Adapter/Mojo.pm',
-  AUTHOR       => 'Henry Tang <henryykt@gmail.com>',
-  PREREQ_PM => { 'Mojolicious' => '1.13', 'Log::Any::Adapter' => '0.03' },
-  test => {TESTS => 't/*.t t/*/*.t t/*/*/*.t'}
+    NAME         => 'Log::Any::Adapter::Mojo',
+    VERSION_FROM => 'lib/Log/Any/Adapter/Mojo.pm',
+    AUTHOR       => 'Henry Tang <henryykt@gmail.com>',
+    PREREQ_PM => { 'Mojolicious' => '1.13', 'Log::Any::Adapter' => '0.03' },
+    LICENSE   => 'artistic_2',
+    test => { TESTS => 't/*.t t/*/*.t t/*/*/*.t' }
 );
